fix overflowing image

--- a/wwwroot/assets/css/override.less
+++ b/wwwroot/assets/css/override.less
@@ -14,6 +14,10 @@
     }
 }
 
+.img-fluid {
+    max-width: 100%;
+}
+
 .content a {
     text-decoration: underline;
 }
